--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -26,7 +26,7 @@ spring.redis.port=6379
 spring.redis.password=111111
 # 连接池最大连接数（使用负值表示没有限制） 默认 8
 spring.redis.lettuce.pool.max-active=8
-# 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 -1
+# 连接池最大阻塞等待时间（使用负值表示没有限制） 默认 
 spring.redis.lettuce.pool.max-wait=-1
 # 连接池中的最大空闲连接 默认 8
 spring.redis.lettuce.pool.max-idle=8
